[package]
name = "solana-jsonrpc-ipc-server"
description = "IPC server for JSON-RPC"
version = "0.1.2"
authors = ["Solana Labs <maintainers@solana.com>"]
license = "MIT"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"
documentation = "https://paritytech.github.io/jsonrpc/json_ipc_server/index.html"

[dependencies]
log = "0.4"
tokio-service = "0.1"
solana-jsonrpc-core = { version = "0.1", path = "../core" }
solana-jsonrpc-server-utils = { version = "0.1", path = "../server-utils" }
parity-tokio-ipc = { git = "https://github.com/nikvolf/parity-tokio-ipc", rev = "306ea3e" }
parking_lot = "0.6"

[dev-dependencies]
env_logger = "0.5"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio-uds = "0.2"

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.1"}
