[package]
description = "Helper macros for jsonrpc-core"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"
license = "MIT"
name = "solana-jsonrpc-macros"
version = "0.2.0"
authors = ["Solana Labs <maintainers@solana.com>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_macros/index.html"

[dependencies]
serde = "1.0"
solana-jsonrpc-core = { version = "0.2.0", path = "../core" }
solana-jsonrpc-pubsub = { version = "0.2.0", path = "../pubsub" }

[dev-dependencies]
serde_json = "1.0"
solana-jsonrpc-tcp-server = { version = "0.2.0", path = "../tcp" }

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.1"}
