[package]
description = "Server utils for jsonrpc-core crate."
name = "solana-jsonrpc-server-utils"
version = "0.1.2"
authors = ["Solana Labs <maintainers@solana.com>"]
license = "MIT"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_core/index.html"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"

[dependencies]
bytes = "0.4"
globset = "0.4"
solana-jsonrpc-core = { version = "0.1", path = "../core" }
lazy_static = "1.1.0"
log = "0.4"
num_cpus = "1.8"
tokio = { version = "0.1" }
tokio-codec = { version = "0.1" }
unicase = "2.0"

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.1"}
