[package]
name = "solana-jsonrpc-stdio-server"
description = "STDIN/STDOUT server for JSON-RPC"
version = "0.1.2"
authors = ["Solana Labs <maintainers@solana.com>"]
license = "MIT"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_stdio_server/index.html"

[dependencies]
futures = "0.1.23"
solana-jsonrpc-core = { version = "0.1", path = "../core" }
log = "0.4"
tokio = "0.1.7"
tokio-codec = "0.1.1"
tokio-io = "0.1.7"
tokio-stdin-stdout = "0.1.4"

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.5"

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.1"}
