[package]
name = "solana-jsonrpc-tcp-server"
description = "TCP/IP server for JSON-RPC"
version = "0.1.2"
authors = ["Solana Labs <maintainers@solana.com>"]
license = "MIT"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"
documentation = "https://paritytech.github.io/jsonrpc/jsonrpc_tcp_server/index.html"

[dependencies]
log = "0.4"
parking_lot = "0.6"
tokio-service = "0.1"
solana-jsonrpc-core = { version = "0.1", path = "../core" }
solana-jsonrpc-server-utils = { version = "0.1", path = "../server-utils" }

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.5"

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.1"}
