[package]
name = "solana-jsonrpc-ws-server"
description = "WebSockets server for JSON-RPC"
version = "0.2.0"
authors = ["Solana Labs <maintainers@solana.com>"]
license = "MIT"
homepage = "https://github.com/solana-labs/jsonrpc"
repository = "https://github.com/solana-labs/jsonrpc"
documentation = "https://paritytech.github.io/jsonrpc/json_ws_server/index.html"

[dependencies]
error-chain = "0.12"
solana-jsonrpc-core = { version = "0.2.0", path = "../core" }
solana-jsonrpc-server-utils = { version = "0.2.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.6"
slab = "0.4"
solana-ws = "0.1"

[badges]
travis-ci = { repository = "solana-labs/jsonrpc", branch = "solana-0.2"}
